Fix z-index for navbar caret

--- a/app/assets/stylesheets/citiesforchange/partials/_mixins.scss
+++ b/app/assets/stylesheets/citiesforchange/partials/_mixins.scss
@@ -89,7 +89,7 @@
     clip-path: polygon(50% 65%, 0% 0%, 100% 0%);
     transform: rotate(180deg);
     position: relative;
-    z-index: 999;
+    z-index: 700;
   }
 }
 
